--- a/Tumor_CNN.ipynb
+++ b/Tumor_CNN.ipynb
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -729,9 +729,7 @@
     "   f=open(filename,'rb')\n",
     "   r=pickle.load(f)\n",
     "   f.close()\n",
-    "   return r\n",
-    "\n",
-    "\n"
+    "   return r\n"
    ]
   },
   {
